# ComputerVisionRobertDirk

./: README.md  main.cpp
Assignment 2/: .cproject  CMakeLists.txt  VoxelReconstruction.sln  VoxelReconstruction.vcxproj  VoxelReconstruction.vcxproj.filters
Assignment 2/.externalToolBuilders/: CMake_VoxelReconstruction_public.launch
Assignment 2/include/: Camera.h  General.h  Glut.h  Reconstructor.h  Scene3DRenderer.h
Assignment 2/src/: VoxelReconstruction.cpp
Assignment 2/src/controllers/: Camera.cpp  Glut.cpp  Reconstructor.cpp  Scene3DRenderer.cpp
Assignment 2/src/utilities/: General.cpp
